--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,3 +8,4 @@ add_executable(Lab1_2 src/Lab1/struct/main.cpp)
 add_executable(Lab2 src/Lab2/main.cpp)
 add_executable(Lab3 src/Lab3/main.cpp)
 add_executable(Lab4 src/Lab4/main.cpp)
+add_executable(Lab5 src/Lab5/main.cpp)
