--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,3 +10,4 @@ add_executable(Lab3 src/Lab3/main.cpp)
 add_executable(Lab4 src/Lab4/main.cpp)
 add_executable(Lab5 src/Lab5/main.cpp)
 add_executable(Lab6 src/Lab6/main.cpp)
+add_executable(Lab7 src/Lab7/main.cpp)
