--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,4 +11,5 @@ add_executable(Lab4 src/Lab4/main.cpp)
 add_executable(Lab5 src/Lab5/main.cpp)
 add_executable(Lab6 src/Lab6/main.cpp)
 add_executable(Lab7 src/Lab7/main.cpp)
-add_executable(Lab8 src/Lab8/main.cpp)
+add_executable(Lab8_1 src/Lab8/FirstTask/main.cpp)
+add_executable(Lab8_2 src/Lab8/SecondTask/main.cpp)
